<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context="com.comp313.activities.BookingDetailsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtClinicName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Clinic Info"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">


                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="20px"
                    android:layout_marginTop="20px"
                    android:visibility="gone"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/txtBookingActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Hospital Address"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:gravity="center_vertical"
                    android:drawableRight="@android:drawable/stat_sys_phone_call"/>
                <TextView
                    android:id="@+id/txtTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Timmings"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:gravity="center_vertical"
                    android:drawableLeft="@android:drawable/ic_menu_recent_history"/>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ratings3"/>


            </LinearLayout>

        </android.support.v7.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select a Physician"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="20px"
                android:layout_marginTop="20px"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10px"
            android:background="@drawable/spinner_background"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <Spinner
                android:id="@+id/spinSpecialtyList"
                style="@style/Widget.AppCompat.DropDownItem.Spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                tools:listitem="@layout/support_simple_spinner_dropdown_item" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:visibility="gone"><!--android:entries="@array/DrNames"-->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="10px"
                android:layout_weight=".65"
                android:background="@drawable/spinner_background">

                <Spinner
                    android:id="@+id/spinDrList"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/support_simple_spinner_dropdown_item" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnDrProfile"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight=".35"
                android:onClick="clk_drProfile"
                android:text="View Profile"
                android:textSize="12sp" />
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <ListView
                android:id="@+id/lv_DoctorsList"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </ListView>


        </android.support.v7.widget.CardView>


        <!--   <LinearLayout
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_weight=".93">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:background="@drawable/listgrad"
                   android:text="@string/actionbar_text"
                   style="@style/actionbar_text"/>
           </LinearLayout>-->

        <!--    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Date and time"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="20px"
                    android:layout_marginTop="20px"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtDate"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.5"
                        android:text="Wed,4 Apr 2018"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtTime"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.5"
                        android:text="hh:mm  AM/PM"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout> -->
    </LinearLayout>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnBookApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="clk_SaveAppoint"
            android:text="S A V E" />

        <Button
            android:id="@+id/btnCancelApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clk_CancelAppoint"
            android:text="Cancel Appointment" />
    </LinearLayout>-->


</RelativeLayout>

