...
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <Button
                    android:id="@+id/btnDrProfile_SelectDr"
                    style="@style/btnPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="clk_MakeAppoint_SelectTime"
                    android:text="Make Appointment" />

                <Button
                    android:id="@+id/btnDrProfile_Login"
                    style="@style/btnPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
